Ignorado el directorio others.
Cambiado CSS para adaptarse a pantallas más pequeñas de forma provisional.

Cambios provisionales en el JS para renderizado en pantallas más pequeñas.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 /.idea/
+/others/
 
 # User-specific stuff
 .idea/**/workspace.xml
@@ -323,3 +324,4 @@ fabric.properties
 # Editor-based Rest Client
 
 # Android studio 3.1+ serialized cache file
+
